# xbridge_witness

./: .clang-format  .gitignore  CMakeLists.txt  README.md  attn_srv.json  conanfile.py  conanfile.txt
.github/actions/dependencies/: action.yml
.github/actions/image/: Dockerfile
.github/actions/package/: action.yml
.github/workflows/: build.yml  clang-format.yml  macos.yml  nix.yml
Builds/CMake/: XBridgeWitnessVersion.cmake
Builds/CMake/packaging/: build_packages.sh  deb.cmake  package.cmake  rpm.cmake
Builds/docker/: Dockerfile  build_git.sh  setup_centos.sh
doc/: testing.md
src/: AttnServer.cpp  AttnServer.h  ChainListener.cpp  ChainListener.h  FederatorEvents.h  RPCServer.cpp  RPCServer.h  WebsocketClient.cpp  WebsocketClient.h  main.cpp
src/test/: Config_test.cpp  DB_test.cpp  JsonChecker_test.cpp  RPCClient_test.cpp  RPCParse_test.cpp  WS_test.cpp  main_test.cpp
src/xbwd/app/: App.cpp  App.h  BuildInfo.cpp  Config.cpp  Config.h  DBInit.cpp  DBInit.h  main.cpp
src/xbwd/basics/: ChainTypes.h
src/xbwd/client/: ChainListener.cpp  ChainListener.h  RpcResultParse.cpp  WebsocketClient.cpp  WebsocketClient.h
src/xbwd/core/: DatabaseCon.cpp  DatabaseCon.h  JsonChecker.cpp  JsonChecker.h  SociDB.cpp  SociDB.h
src/xbwd/federator/: Federator.cpp  Federator.h  FederatorEvents.cpp  FederatorEvents.h
src/xbwd/rpc/: RPCClient.cpp  RPCClient.h  RPCHandler.cpp  RPCHandler.h  ServerHandler.cpp  fromJSON.h
